# windmouse

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  codecov.yaml  pyproject.toml  pytest.ini
.github/workflows/: code-quality.yml  publish.yml  tests.yml
docs/: algorithm.rst  api.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickref.rst  recomendations.rst  usage.rst
src/: __init__.py  ahk_controller.py  core.py  pyautogui_controller.py
tests/: __init__.py  test_core.py  test_imports.py  test_integration.py  test_pyautogui_controller.py
