[project]
name = "windmouse"
version = "1.0.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "numpy>=1.20",
]

[tool.mypy]
strict = true

[tool.black]
line-length = 79

[dependency-groups]
ahk = [
    "ahk>=1.8.4",
]
all = [
    "ahk>=1.8.4",
    "pyautogui>=0.9.54",
]
dev = [
    "black>=25.11.0",
    "mypy>=1.19.0",
]
pyautogui = [
    "pyautogui>=0.9.54",
]
