[project]
name = "windmouse"
version = "1.0.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
ahk = ["ahk>=1.8.4"]
pyautogui = ["pyautogui>=0.9.54"]
all = [
    "ahk>=1.8.4",
    "pyautogui>=0.9.54",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true

[tool.black]
line-length = 79

[tool.setuptools.package-dir]
windmouse = "src"

[dependency-groups]
ahk = [
    "ahk>=1.8.4",
]
all = [
    "ahk>=1.8.4",
    "pyautogui>=0.9.54",
]
dev = [
    "black>=25.11.0",
    "mypy>=1.19.0",
]
pyautogui = [
    "pyautogui>=0.9.54",
]
