[project]
name = "windmouse"
version = "1.0.0"
description = "Human-like mouse movement library implementing the WindMouse algorithm for bot detection avoidance"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "WindMouse Contributors"}
]
keywords = ["automation", "mouse", "windmouse", "bot-detection", "human-like"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "numpy>=1.20",
]

[project.urls]
Homepage = "https://github.com/AsfhtgkDavid/windmouse"
Documentation = "https://windmouse.readthedocs.io"
Repository = "https://github.com/AsfhtgkDavid/windmouse"
Issues = "https://github.com/AsfhtgkDavid/windmouse/issues"

[project.optional-dependencies]
ahk = ["ahk>=1.8.4"]
pyautogui = ["pyautogui>=0.9.54"]
all = [
    "ahk>=1.8.4",
    "pyautogui>=0.9.54",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true

[tool.black]
line-length = 79

[tool.setuptools.package-dir]
windmouse = "src"

[dependency-groups]
ahk = [
    "ahk>=1.8.4",
]
all = [
    "ahk>=1.8.4",
    "pyautogui>=0.9.54",
]
dev = [
    "black>=25.11.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.19.0",
    "pylint>=4.0.4",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
]
pyautogui = [
    "pyautogui>=0.9.54",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.10.0",
]
